<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">NearTweet</string>
    <string name="action_settings">Settings</string>
    <string name="login_hint">Enter a username</string>
    <string name="login_button_text">Connect</string>
    <string name="title_activity_poll">PollActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="poll_description_hint">Enter a description for this poll.</string>
    <string name="poll_newOption_text">Option Description.</string>
    <string name="poll_addOption_button">Add</string>
    <string name="poll_removeOption_button">Remove</string>
    <string name="poll_startPoll">Start Poll</string>
    <string name="createPollTitle">Create Poll</string>
    <string name="title_activity_poll_details">PollDetailsActivity</string>
    <string name="poll_description_text">PollDescription</string>
    <string name="poll_submit_vote_button">Vote</string>
    <string name="pollDetailsTitle">Poll Details</string>
    <string name="title_activity_tweets_stream">TweetsStreamActivity</string>
    <string name="title_activity_tweet_details_acitivity">TweetDetailsAcitivity</string>
    <string name="reply_tweet_button">Reply</string>
    <string name="new_tweet_button">New Tweet</string>
    <string name="loginTwitter">Login Twitter</string>
    <string name="new_pool_button">New Pool</string>
    <string name="submit_tweet">Tweet</string>
    <string name="mark_as_spam">Spam</string>
    <string name="retweet">Retweet</string>
    <string name="retweet_details">Check Status before Sharing</string>
    <string name="cancel">Cancel</string>
    <string name="welcome">Hello!</string>
    <string name="createTweet">Tweet</string>
    <string name="title_activity_multimedia">MultimediaActivity</string>
    <string name="menu_settings">Settings</string>
    <string name="createPoll">Poll</string>
    <string name="title_activity_connect">ConnectActivity</string>
    <string name="serverAddress_hint">Server Address</string>
    <string name="connect">Connect</string>
    <string name="serverPort_hint">Server Port</string>
    <string name="reply">Reply</string>
    <string name="tweet_image">Tweet Image</string>
    <string name="tweet_details">Tweet Details</string>
    <string name="reply_text_hint">Enter Reply Text</string>
    <string name="disconnect">Disconnect</string>
    <string name="title_activity_poll_votes_details">PollVotesDetails</string>
    <string name="broadcast_reply">Broadcast Reply</string>
    <string name="spam">Spam</string>
    <string name="title_activity_users">UsersActivity</string>
    <string name="users">Users</string>
    <string name="port">1001</string>

</resources>