<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ConnectActivity" >

    <Button
        android:id="@+id/connectButton"
        style="@style/CommentListItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:text="@string/connect" />

    <EditText
        android:id="@+id/serverAddressText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:ems="10"
        android:hint="@string/serverAddress_hint"
        android:inputType="text" />

    <EditText
        android:id="@+id/serverPortText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/serverAddressText"
        android:layout_centerVertical="true"
        android:ems="10"
        android:hint="@string/serverPort_hint"
        android:inputType="text" />

    <Button
        android:id="@+id/disconnectButton"
        style="@style/CommentListItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/serverPortText"
        android:layout_alignRight="@+id/connectButton"
        android:layout_below="@+id/serverPortText"
        android:layout_marginTop="62dp"
        android:text="@string/disconnect" />

</RelativeLayout>